# yew-timer

./: Cargo.toml  README.md  index.html  main.css  note.md
src/: Clock.module.css  ClockControls.module.css  ClockControls.rs  Stopwatch.module.css  app.rs  clock.rs  event_table.rs  events_table.rs  main.rs  test_component.rs
src/components/: clock.rs  clock_controls.rs  event_row.rs  events_table.rs  mod.rs
src/icons/: mod.rs  play_circle.rs  stop_circle.rs  x_circle.rs
src/styles/: EventsRow.scss  EventsTable.scss  global.scss  index.scss  main.scss  reset.scss  variables.scss
src/types/: mod.rs  tasks.rs
src/utils/: format_time.rs  mod.rs  requests.rs
