[package]
name = "yew-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo = "0.6.0"
js-sys = "0.3"
libmath = "0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]