[package]
name = "yew-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo = "0.6.0"
js-sys = "0.3"
libmath = "0.2.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4"
reqwasm = "0.4.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.9", features = ["json"] }
yew-hooks = "0.1.33"
thiserror = "1"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }


[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]